--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
   </head>
   <body> 
-    <header class="bg-primary bg-gradient text-white py-5">
+    <header class="bg-dark bg-gradient text-white py-5">
       <div class="container">
         <div class="row">
           <div class="col-md-3 text-left text-md-center mb-3">
-            <img class="rounded-circle img-fluid" src="/image.jpeg" alt="profile photo" />
+            <img class="rounded-circle img-fluid" src="./image.jpeg" alt="profile photo" />
           </div>
           <div class="col-md-5">
             <h1>Hello,I am Trina Paul</h1>
@@ -82,16 +82,16 @@
 <h2 class="mb-5 ml-2">Education</h2>
 <ul>
   <li>
-    <h6 class="text-primary">B.Sc in Computer Science <br>Leading University 2020-present</h6>
+    <h6 class="text-dark">B.Sc in Computer Science <br>Leading University 2020-present</h6>
     <p>Passing year: 2020-2023 (Running)</p>
   </li>
   <li>
-    <h6 class="text-primary">Higer Secondary Certificate <br> Bangladesh Gas Fields School & Collage</h6>
+    <h6 class="text-dark">Higer Secondary Certificate <br> Bangladesh Gas Fields School & Collage</h6>
     <p>Passing year: 2019
     </p>
   </li>
   <li>
-    <h6 class="text-primary">Secondary School Certificate
+    <h6 class="text-dark">Secondary School Certificate
       <br>Bangladesh Gas Fields School & Collage</h6>
     <p>Passing year: 2017
     </p>
@@ -100,28 +100,28 @@
 
 <h2 class="mb-5 ml-2">Skills</h2>      
 <div class="progress mb-4 ml-2" style="height:25px;">
-  <div class="progress-bar bg-primary text-left pl-2" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">HTML</div>
+  <div class="progress-bar bg-dark text-left pl-2" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">HTML</div>
 </div>       
 <div class="progress mb-4 ml-2" style="height:25px;">
-  <div class="progress-bar bg-primary text-left pl-2" role="progressbar" style="width: 69%" aria-valuenow="69" aria-valuemin="0" aria-valuemax="100">CSS</div>
+  <div class="progress-bar bg-dark text-left pl-2" role="progressbar" style="width: 69%" aria-valuenow="69" aria-valuemin="0" aria-valuemax="100">CSS</div>
 </div> 
 <div class="progress mb-4 ml-2" style="height:25px;">
-  <div class="progress-bar bg-primary text-left pl-2" role="progressbar" style="width: 57%" aria-valuenow="57" aria-valuemin="0" aria-valuemax="100">JavaScript</div>
+  <div class="progress-bar bg-dark text-left pl-2" role="progressbar" style="width: 57%" aria-valuenow="57" aria-valuemin="0" aria-valuemax="100">JavaScript</div>
 </div>       
 <!-- <div class="progress mb-4" style="height:25px;">
-  <div class="progress-bar bg-primary text-left pl-2" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">WordPress</div>
+  <div class="progress-bar bg-dark text-left pl-2" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">WordPress</div>
 </div>   -->
 <!-- <div class="progress mb-4" style="height:25px;">
-  <div class="progress-bar bg-primary text-left pl-2" role="progressbar" style="width: 78%" aria-valuenow="78" aria-valuemin="0" aria-valuemax="100">Photoshop</div>
+  <div class="progress-bar bg-dark text-left pl-2" role="progressbar" style="width: 78%" aria-valuenow="78" aria-valuemin="0" aria-valuemax="100">Photoshop</div>
 </div>        -->
 <div class="progress mb-4 ml-2" style="height:25px;">
-  <div class="progress-bar bg-primary text-left pl-2" role="progressbar" style="width: 27%" aria-valuenow="37" aria-valuemin="0" aria-valuemax="100">PHP</div>
+  <div class="progress-bar bg-dark text-left pl-2" role="progressbar" style="width: 27%" aria-valuenow="37" aria-valuemin="0" aria-valuemax="100">PHP</div>
 </div>
 <div class="progress mb-4 ml-2" style="height:25px;">
-  <div class="progress-bar bg-primary text-left pl-2" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Java</div>
+  <div class="progress-bar bg-dark text-left pl-2" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">Java</div>
 </div> 
 <div class="progress mb-4 ml-2" style="height:25px;">
-  <div class="progress-bar bg-primary text-left pl-2" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">Flutter</div>
+  <div class="progress-bar bg-dark text-left pl-2" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">Flutter</div>
 </div>
 
 <h2 class="mb-5 ml-2">My projects</h2> 
@@ -151,7 +151,7 @@
   </div>  -->
 </div> 
 
-<footer class="bg-dark text-white-50 text-center mt-5 p-3">
+<footer class="bg-info text-white-50 text-center mt-5 p-3">
   <a href="https://github.com/trina-paul"  target="_blank" class="text-white-50">GitHub</a>
    <!-- | <a href="#" class="text-white-50">LinkedIn</a> | <a href="#" class="text-white-50">Twitter</a> -->
 </footer>
